# Solana-Staking

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json
amm-anchor/: Cargo.toml
amm-anchor/src/: lib.rs
lib/: Cargo.toml
programs/: staking-on-solana.rar
programs/staking-on-solana/: Cargo.toml
programs/staking-on-solana/src/: lib.rs
programs/staking-on-solana/src/error/: mod.rs
programs/staking-on-solana/src/events/: mod.rs
programs/staking-on-solana/src/instructions/: claim_reward.rs  compound_reward.rs  create_pool.rs  initialize.rs  mod.rs  pending_reward.rs  stake.rs  start_reward.rs  stop_reward.rs  unstake.rs
programs/staking-on-solana/src/state/: constants.rs  mod.rs  platform_info.rs  pool_config.rs  pool_state.rs  user_info.rs
programs/staking-on-solana/src/utils/: mod.rs
tests/: staking-on-solana.ts  utils.ts  x-compound-reward.ts
