[package]
name = "staking-on-solana"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "staking_on_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.29.0", features = ["init-if-needed"]}
anchor-spl = "0.29.0"
spl-token = "4.0.1"
spl-associated-token-account = "2.3.1"
raydium-contract-instructions = { path = "../../lib"}
amm-anchor = {path = "../../amm-anchor"}